--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "swagger-ui-react": "^5.22.0"
   },
   "devDependencies": {
