--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@docusaurus/module-type-aliases": "^3.8.1",
     "@docusaurus/tsconfig": "^3.8.1",
     "@docusaurus/types": "^3.8.1",
+    "dotenv": "^17.2.0",
     "typescript": "~5.6.2"
   },
   "browserslist": {
