typesense local stup and deployment info

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 TESTING=true
+
+# Typesense client for the browser (search-only)
+TYPESENSE_COLLECTION=opendatahub-docs
+TYPESENSE_HOST=localhost
+TYPESENSE_PORT=8108
+TYPESENSE_PROTOCOL=http
+TYPESENSE_SEARCH_ONLY_API_KEY=aEKHKOnMKbESmGDlMT7w8amB8FLU4DXa
