--- a/.github/workflows/deploy-typesense.yml
+++ b/.github/workflows/deploy-typesense.yml
@@ -32,7 +32,7 @@ jobs:
           X_COMPOSE_PROJECT_NAME: ${{ env.PROJECT_NAME }}
           X_SERVER_PORT: 1073
           X_TYPESENSE_API_KEY: ${{ secrets.TYPESENSE_API_KEY_TEST }}
-          X_CORS_DOMAINS: "https://docs.dev.testingmachine.eu/"
+          X_CORS_DOMAINS: "https://docs.dev.testingmachine.eu"
 
       - name: Create .env file (prod)
         if: ${{ github.event.inputs.environment == 'prod' }}
