--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Production
 /build
+/typesense/typesense-data
 
 # Generated files
 .docusaurus
@@ -15,6 +16,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+typesense/scraper.env
 
 npm-debug.log*
 yarn-debug.log*
